// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownFiltered /> renders the Dropdown with options with no a11y violations 1`] = `
.c1 {
  display: block;
  margin: 0 0 10px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  font-size: 16px;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

.c3 {
  position: relative;
}

.c6 {
  position: absolute;
  top: 1px;
  bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 48px;
  color: #818F9B;
  right: 1px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c5 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  padding-right: 60px;
  font-size: 16px;
  font-weight: 400;
  color: #4A545E;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 16px;
}

.c5:focus,
.c5:hover {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c5::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c5::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c5:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c5::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c5:disabled {
  -webkit-text-fill-color: #818F9B;
  opacity: 1;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  background-color: #F7F7F7;
  cursor: not-allowed;
}

.c4 input {
  margin-bottom: 0;
}

.c4 input + span {
  cursor: pointer;
}

.c4 input:disabled + span {
  cursor: not-allowed;
}

.c2 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    role="combobox"
  >
    <label
      class="c1"
      for="text-id-test"
      id="downshift-0-label"
    >
      Label
    </label>
    <div
      class="c2"
    >
      <div
        class="c3 c4"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="c5"
          id="text-id-test"
          name="test"
          value=""
        />
        <span
          class="c6"
        >
          <svg
            aria-hidden="true"
            aria-label="open.menu"
            class="svg-inline--fa fa-sort "
            color="#818F9B"
            data-icon="sort"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropdownFiltered /> renders the DropdownFiltered with options and a default selected value 1`] = `
.c0 {
  max-width: 100%;
  width: 100%;
}

.c2 {
  position: relative;
}

.c5 {
  position: absolute;
  top: 1px;
  bottom: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 48px;
  color: #818F9B;
  right: 1px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c4 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  height: 50px;
  padding: 0 16px;
  padding-right: 60px;
  font-size: 16px;
  font-weight: 400;
  color: #4A545E;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 16px;
}

.c4:focus,
.c4:hover {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c4::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c4::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c4:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c4::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c4:disabled {
  -webkit-text-fill-color: #818F9B;
  opacity: 1;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  background-color: #F7F7F7;
  cursor: not-allowed;
}

.c3 input {
  margin-bottom: 0;
}

.c3 input + span {
  cursor: pointer;
}

.c3 input:disabled + span {
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    role="combobox"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="c4"
          id="text-id-test"
          name="test"
          value="orange"
        />
        <span
          class="c5"
        >
          <svg
            aria-hidden="true"
            aria-label="open.menu"
            class="svg-inline--fa fa-sort "
            color="#818F9B"
            data-icon="sort"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 320 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
